Switched from new Integer() to Integer.valueOf(), since I discovered that valueOf() maintains a small cache that might improve performance a little.
--HG--
extra : convert_revision : svn%3A5c944932-937e-0410-aa5c-9344c804e6c3/trunk%40476