@@ -137,7 +137,7 @@ public class GroupData
     
     // Add a default root group.
     groupVec.add( "".intern() );
-    groupMap.put( "".intern(), new Integer(0) );
+    groupMap.put( "".intern(), Integer.valueOf(0) );
 
     // Make an entry for each document and each term. Ensure that
     // there is only one term in this field per document.
@@ -163,7 +163,7 @@ public class GroupData
             {
                 // Get or create a vector for this document.
                 int docId = termPositions.doc();
-                Integer docKey = new Integer(docId);
+                Integer docKey = Integer.valueOf(docId);
                 
                 Vector docGroups = (Vector) docMap.get( docKey );
                 if( docGroups == null ) {
@@ -232,7 +232,7 @@ public class GroupData
         String  parentName = curName.intern();
         Integer parentKey  = (Integer) groupMap.get( parentName );
         if( parentKey == null ) {
-            parentKey = new Integer( groupVec.size() ); 
+            parentKey = Integer.valueOf( groupVec.size() ); 
             groupVec.add( parentName );
             groupMap.put( parentName, parentKey );
         }
